Fix alignment

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -4,12 +4,11 @@
   align-items: center;
   padding: 4px 24px;
   border-bottom: 1px solid var(--prim-300);
-  &__header {
+  &__title {
     color: var(--prim-300);
-    font-size: 1.875rem;
+    font-size: 1.5rem;
     font-weight: 500;
     flex-grow: 1;
-    text-align: center;
     text-transform: uppercase;
   }
   &__forces {
